# erling-midi

./: CMakeLists.txt  README.md
midi-keyboard/: CMakeLists.txt  README.md  circular.c  circular.h  main.c
